--- a/style.css
+++ b/style.css
@@ -1331,6 +1331,11 @@
          margin: auto;
      }
 
+     .contactBoxtwo{
+        width: 80%;
+        margin: auto;
+     }
+
      .iconBlock {
          border-top: 2px solid rgb(12, 12, 12);
          width: 90%;
