--- a/style.css
+++ b/style.css
@@ -1332,8 +1332,9 @@
      }
 
      .contactBoxtwo{
-        width: 80%;
+        width: 90%;
         margin: auto;
+        height: auto;
      }
 
      .iconBlock {
